--- a/Advanced_Python_BuiltInFunctions_Map_Filter_Reduce_Recursion_Lecture-Starter.ipynb
+++ b/Advanced_Python_BuiltInFunctions_Map_Filter_Reduce_Recursion_Lecture-Starter.ipynb
@@ -1889,7 +1889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [
     {
@@ -1914,81 +1914,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 260,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on method_descriptor:\n",
-      "\n",
-      "sort(self, /, *, key=None, reverse=False)\n",
-      "    Sort the list in ascending order and return None.\n",
-      "    \n",
-      "    The sort is in-place (i.e. the list itself is modified) and stable (i.e. the\n",
-      "    order of two equal elements is maintained).\n",
-      "    \n",
-      "    If a key function is given, apply it once to each list item and sort them,\n",
-      "    ascending or descending, according to their function values.\n",
-      "    \n",
-      "    The reverse flag can be set to sort in descending order.\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "help(list.sort)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 212,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on built-in function sorted in module builtins:\n",
-      "\n",
-      "sorted(iterable, /, *, key=None, reverse=False)\n",
-      "    Return a new list containing all items from the iterable in ascending order.\n",
-      "    \n",
-      "    A custom key function can be supplied to customize the sort order, and the\n",
-      "    reverse flag can be set to request the result in descending order.\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "help(sorted)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 214,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['bob', 'billy', 'alex', 'amanda', 'amy', 'barbary', 'catherine']\n",
-      "['bob', 'amy', 'alex', 'billy', 'amanda', 'barbary', 'catherine']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(names)\n",
-    "\n",
-    "print(sorted(names, key=len))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2001,14 +1926,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 295,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Nashua', 89.6), ('Boston', 53.6), ('Los Angelos', 111.2), ('Miami', 84.2)]"
+      ]
+     },
+     "execution_count": 295,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# F = (9/5)*C + 32\n",
     "places = [('Nashua',32),(\"Boston\",12),(\"Los Angelos\",44),(\"Miami\",29)]\n",
     "\n",
-    "list(map)"
+    "list(map(lambda local: (local[0], local[1] * 9/5 + 32), places))\n",
+    "\n"
    ]
   },
   {
@@ -2029,27 +1966,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 296,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 229,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 0: None\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'NoneType' and 'NoneType'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [296]\u001b[0m, in \u001b[0;36m<cell line: 7>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m result\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num):\n\u001b[1;32m----> 8\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIteration \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfib(i)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     10\u001b[0m fib(\u001b[38;5;241m12\u001b[39m)\n",
+      "Input \u001b[1;32mIn [296]\u001b[0m, in \u001b[0;36mfib\u001b[1;34m(num)\u001b[0m\n\u001b[0;32m      2\u001b[0m num1, num2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m num1 \u001b[38;5;241m<\u001b[39m num:\n\u001b[1;32m----> 4\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[43mfib\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnum\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mfib\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnum\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'NoneType' and 'NoneType'"
+     ]
     }
    ],
    "source": [
     "def fib(num):\n",
-    "    return num\n",
+    "    if num <= 1:\n",
+    "        return num\n",
+    "        print(f\"fib{num} = {num}\")\n",
+    "    else:\n",
+    "        return fib(num-1) + fib(num-2)\n",
+    "        \n",
     "\n",
-    "fib(6)"
+    "\n",
+    "for i in range(num):\n",
+    "    print(f\"Iteration {i}: {fib(i)}\")\n",
+    "\n",
+    "fib(12)"
    ]
   },
   {
