--- a/Advanced_Python_BuiltInFunctions_Map_Filter_Reduce_Recursion_Lecture-Starter.ipynb
+++ b/Advanced_Python_BuiltInFunctions_Map_Filter_Reduce_Recursion_Lecture-Starter.ipynb
@@ -1966,7 +1966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 301,
    "metadata": {
     "scrolled": true
    },
@@ -1975,19 +1975,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 0: None\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +: 'NoneType' and 'NoneType'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [296]\u001b[0m, in \u001b[0;36m<cell line: 7>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m result\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num):\n\u001b[1;32m----> 8\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIteration \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfib(i)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     10\u001b[0m fib(\u001b[38;5;241m12\u001b[39m)\n",
-      "Input \u001b[1;32mIn [296]\u001b[0m, in \u001b[0;36mfib\u001b[1;34m(num)\u001b[0m\n\u001b[0;32m      2\u001b[0m num1, num2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m num1 \u001b[38;5;241m<\u001b[39m num:\n\u001b[1;32m----> 4\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[43mfib\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnum\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mfib\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnum\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'NoneType' and 'NoneType'"
+      "Iteration 0: 0\n",
+      "Iteration 1: 1\n",
+      "Iteration 2: 1\n",
+      "Iteration 3: 2\n",
+      "Iteration 4: 3\n",
+      "Iteration 5: 5\n",
+      "Iteration 6: 8\n",
+      "Iteration 7: 13\n",
+      "Iteration 8: 21\n",
+      "Iteration 9: 34\n",
+      "Iteration 10: 55\n",
+      "Iteration 11: 89\n"
      ]
     }
    ],
@@ -1995,53 +1994,25 @@
     "def fib(num):\n",
     "    if num <= 1:\n",
     "        return num\n",
-    "        print(f\"fib{num} = {num}\")\n",
     "    else:\n",
     "        return fib(num-1) + fib(num-2)\n",
     "        \n",
-    "\n",
-    "\n",
-    "for i in range(num):\n",
+    "for i in range(12):\n",
     "    print(f\"Iteration {i}: {fib(i)}\")\n",
-    "\n",
-    "fib(12)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 231,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration 5: 0\n",
-      "Iteration 5: 1\n",
-      "Iteration 5: 2\n",
-      "Iteration 5: 3\n",
-      "Iteration 5: 4\n"
-     ]
-    }
-   ],
-   "source": [
-    "n = 5\n",
-    "\n",
-    "for i in range(n):\n",
-    "    print(f\"Iteration {n}: {fib(i)}\")"
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### In-Class Exercise #6 <br>\n",
+    "### Exercise #5 <br>\n",
     "<p>Create a generator that takes a number argument and yields that number squared, then prints each number squared until zero is reached.</p>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2056,16 +2027,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "81"
+       "4"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 312,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2073,6 +2044,13 @@
    "source": [
     "next(do_it)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
